// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root module \`index.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"assets/highlight.css\\" />
	<script async src=\\"assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\".\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<h2>demo</h2>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<p>This is appended to the root module</p>
				<p>See <a href=\\"variables/pkg_a.stubA.html\\">stubA</a>, stubA, stubB or <a href=\\"variables/pkg_b.stubB.html\\">stubB</a></p>
			</div>
			<hr />
			<div class=\\"tsd-panel tsd-typography\\">
				<p>Test root readme.</p>
				<p><a href=\\"variables/pkg_a.stubA.html\\">stubA</a>
					<a href=\\"variables/pkg_b.stubB.html\\">stubB</a>
				</p>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current selected\\"><a href=\\"modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"tsd-kind-module\\"><a href=\\"modules/pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"assets/main.js\\"></script>
</body>

</html>"
`;

exports[`Root module \`pages/root-doc/child.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>Root doc child | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/highlight.css\\" />
	<script async src=\\"../../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"../..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../../modules.html\\">demo</a></li>
					<li><a href=\\"index.html\\">Root doc</a></li>
					<li><a href=\\"child.html\\">Root doc child</a></li>
				</ul>
				<h1> Root doc child</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<p>Some content for the root child with a link to <a href=\\"../../pkg_a/pages/using-pkg-a.html\\">Using pkg-a</a>.</p>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../../modules.html\\">demo</a>
								<ul>
									<li class=\\"current pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"index.html\\">Root doc</a>
										<ul>
											<li class=\\"current selected pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../modules/pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\"></nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`Root module \`pages/root-doc/index.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>Root doc | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/highlight.css\\" />
	<script async src=\\"../../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"../..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../../modules.html\\">demo</a></li>
					<li><a href=\\"index.html\\">Root doc</a></li>
				</ul>
				<h1> Root doc</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<p>Some content for the root</p>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../../modules.html\\">demo</a>
								<ul>
									<li class=\\"current selected pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../modules/pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\"></nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-a \`modules/pkg_a.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>pkg-a | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/highlight.css\\" />
	<script async src=\\"../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../modules.html\\">demo</a></li>
					<li><a href=\\"pkg_a.html\\">pkg-a</a></li>
				</ul>
				<h1>Module pkg-a</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<a href=\\"#this-is-appended-to-the-readme-of-pkg-a\\" id=\\"this-is-appended-to-the-readme-of-pkg-a\\" style=\\"color: inherit; text-decoration: none;\\">
					<h2>This is appended to the readme of <code>pkg-a</code></h2>
				</a>
				<p>See <a href=\\"../variables/pkg_a.stubA.html\\">stubA</a>, <a href=\\"../variables/pkg_a.stubA.html\\">stubA</a>, stubB or <a href=\\"../variables/pkg_b.stubB.html\\">stubB</a></p>
			</div>
			<hr />
			<aside class=\\"tsd-sources\\">
				<ul>
					<li>Defined in <a href=\\"https://github.com/KnodesCommunity/typedoc-plugins/blob/develop/packages/plugin-pages/__tests__/mock-fs/monorepo/packages/a/src/index.ts#L6\\">a/src/index.ts:6</a></li>
				</ul>
			</aside>
			<section class=\\"tsd-panel-group\\">
				<section class=\\"tsd-panel tsd-typography\\"></section>
			</section>
			<section class=\\"tsd-panel-group tsd-index-group\\">
				<section class=\\"tsd-panel tsd-index-panel\\">
					<h3 class=\\"tsd-index-heading uppercase\\">Index</h3>
					<section class=\\"tsd-index-section\\">
						<h3 class=\\"tsd-index-heading\\">Variables</h3>
						<div class=\\"tsd-index-list\\"><a href=\\"../variables/pkg_a.stubA.html\\" class=\\"tsd-index-link tsd-kind-variable tsd-parent-kind-module\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
									<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
									<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
								</svg><span>stubA</span></a>
						</div>
					</section>
				</section>
			</section>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"current selected tsd-kind-module\\"><a href=\\"pkg_a.html\\">pkg-<wbr />a</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pkg_a/pages/using-pkg-a.html\\">Using pkg-<wbr />a</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"../variables/pkg_a.stubA.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<use href=\\"#icon-32-path\\"></use>
								<use href=\\"#icon-32-text\\"></use>
							</svg>stubA</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-a \`pkg_a/pages/using-pkg-a.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>Using pkg-a | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../../assets/highlight.css\\" />
	<script async src=\\"../../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"../..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../../modules.html\\">demo</a></li>
					<li><a href=\\"../../modules/pkg_a.html\\">pkg-a</a></li>
					<li><a href=\\"using-pkg-a.html\\">Using pkg-a</a></li>
				</ul>
				<h1> Using pkg-a</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<a href=\\"#some-content-for-pkg-a\\" id=\\"some-content-for-pkg-a\\" style=\\"color: inherit; text-decoration: none;\\">
					<h2>Some content for <code>pkg-a</code></h2>
				</a>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"current tsd-kind-module\\"><a href=\\"../../modules/pkg_a.html\\">pkg-<wbr />a</a>
										<ul>
											<li class=\\"current selected pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"using-pkg-a.html\\">Using pkg-<wbr />a</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../modules/pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"../../variables/pkg_a.stubA.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
								<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
							</svg>stubA</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-a \`variables/pkg_a.stubA.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>stubA | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/highlight.css\\" />
	<script async src=\\"../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../modules.html\\">demo</a></li>
					<li><a href=\\"../modules/pkg_a.html\\">pkg-a</a></li>
					<li><a href=\\"pkg_a.stubA.html\\">stubA</a></li>
				</ul>
				<h1>Variable stubA<code class=\\"tsd-tag ts-flagConst\\">Const</code> </h1>
			</div>
			<div class=\\"tsd-signature\\">stubA<span class=\\"tsd-signature-symbol\\">:</span> <span class=\\"tsd-signature-type\\">0</span><span class=\\"tsd-signature-symbol\\"> = 0</span></div>
			<div class=\\"tsd-comment tsd-typography\\">
				<p>See also <a href=\\"../pages/root-doc/index.html\\">the root doc page</a>.</p>
				<p><a href=\\"pkg_b.stubB.html\\">stubB</a></p>
			</div>
			<aside class=\\"tsd-sources\\">
				<ul>
					<li>Defined in <a href=\\"https://github.com/KnodesCommunity/typedoc-plugins/blob/develop/packages/plugin-pages/__tests__/mock-fs/monorepo/packages/a/src/index.ts#L6\\">a/src/index.ts:6</a></li>
				</ul>
			</aside>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"current tsd-kind-module\\"><a href=\\"../modules/pkg_a.html\\">pkg-<wbr />a</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pkg_a/pages/using-pkg-a.html\\">Using pkg-<wbr />a</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../modules/pkg_b.html\\">pkg-<wbr />b</a></li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"current tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"pkg_a.stubA.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
								<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
							</svg>stubA</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-b \`modules/pkg_b.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>pkg-b | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/highlight.css\\" />
	<script async src=\\"../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../modules.html\\">demo</a></li>
					<li><a href=\\"pkg_b.html\\">pkg-b</a></li>
				</ul>
				<h1>Module pkg-b</h1>
			</div>
			<aside class=\\"tsd-sources\\">
				<ul>
					<li>Defined in <a href=\\"https://github.com/KnodesCommunity/typedoc-plugins/blob/develop/packages/plugin-pages/__tests__/mock-fs/monorepo/packages/b/src/index.ts#L4\\">b/src/index.ts:4</a></li>
				</ul>
			</aside>
			<section class=\\"tsd-panel-group\\">
				<section class=\\"tsd-panel tsd-typography\\"></section>
			</section>
			<section class=\\"tsd-panel-group tsd-index-group\\">
				<section class=\\"tsd-panel tsd-index-panel\\">
					<h3 class=\\"tsd-index-heading uppercase\\">Index</h3>
					<section class=\\"tsd-index-section\\">
						<h3 class=\\"tsd-index-heading\\">Variables</h3>
						<div class=\\"tsd-index-list\\"><a href=\\"../variables/pkg_b.stubB.html\\" class=\\"tsd-index-link tsd-kind-variable tsd-parent-kind-module\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
									<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
									<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
								</svg><span>stubB</span></a>
						</div>
					</section>
				</section>
			</section>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"current selected tsd-kind-module\\"><a href=\\"pkg_b.html\\">pkg-<wbr />b</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pkg_b/pages/using-pkg-b/index.html\\">Using pkg-<wbr />b</a>
												<ul>
													<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pkg_b/pages/using-pkg-b/details.html\\">pkg-<wbr />b details</a></li>
												</ul>
											</li>
										</ul>
									</li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"../variables/pkg_b.stubB.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<use href=\\"#icon-32-path\\"></use>
								<use href=\\"#icon-32-text\\"></use>
							</svg>stubB</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-b \`pkg_b/pages/using-pkg-b/details.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>pkg-b details | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../../../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../../../assets/highlight.css\\" />
	<script async src=\\"../../../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../../../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"../../..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../../../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../../../modules.html\\">demo</a></li>
					<li><a href=\\"../../../modules/pkg_b.html\\">pkg-b</a></li>
					<li><a href=\\"index.html\\">Using pkg-b</a></li>
					<li><a href=\\"details.html\\">pkg-b details</a></li>
				</ul>
				<h1> pkg-b details</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<pre><code><span class=\\"hl-0\\">Test</span>
</code></pre>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../../../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../../../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../../../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../../modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"current tsd-kind-module\\"><a href=\\"../../../modules/pkg_b.html\\">pkg-<wbr />b</a>
										<ul>
											<li class=\\"current pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"index.html\\">Using pkg-<wbr />b</a>
												<ul>
													<li class=\\"current selected pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"details.html\\">pkg-<wbr />b details</a></li>
												</ul>
											</li>
										</ul>
									</li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"../../../variables/pkg_b.stubB.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
								<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
							</svg>stubB</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../../../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-b \`pkg_b/pages/using-pkg-b/index.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>Using pkg-b | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../../../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../../../assets/highlight.css\\" />
	<script async src=\\"../../../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../../../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"../../..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../../../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../../../modules.html\\">demo</a></li>
					<li><a href=\\"../../../modules/pkg_b.html\\">pkg-b</a></li>
					<li><a href=\\"index.html\\">Using pkg-b</a></li>
				</ul>
				<h1> Using pkg-b</h1>
			</div>
			<div class=\\"tsd-panel tsd-typography\\">
				<a href=\\"#some-content-for-pkg-b\\" id=\\"some-content-for-pkg-b\\" style=\\"color: inherit; text-decoration: none;\\">
					<h2>Some content for <code>pkg-b</code></h2>
				</a>
				<p>See <a href=\\"../../../variables/pkg_a.stubA.html\\">stubA</a>, stubA, <a href=\\"../../../variables/pkg_b.stubB.html\\">stubB</a> or <a href=\\"../../../variables/pkg_b.stubB.html\\">stubB</a></p>
			</div>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../../../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../../../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../../../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../../../modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"current tsd-kind-module\\"><a href=\\"../../../modules/pkg_b.html\\">pkg-<wbr />b</a>
										<ul>
											<li class=\\"current selected pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"index.html\\">Using pkg-<wbr />b</a>
												<ul>
													<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"details.html\\">pkg-<wbr />b details</a></li>
												</ul>
											</li>
										</ul>
									</li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"../../../variables/pkg_b.stubB.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
								<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
							</svg>stubB</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../../../assets/main.js\\"></script>
</body>

</html>"
`;

exports[`pkg-b \`variables/pkg_b.stubB.html\` should have constant content 1`] = `
"<!DOCTYPE html>
<html class=\\"default\\" lang=\\"en\\">

<head>
	<meta charSet=\\"utf-8\\" />
	<meta http-equiv=\\"x-ua-compatible\\" content=\\"IE=edge\\" />
	<title>stubB | demo</title>
	<meta name=\\"description\\" content=\\"Documentation for demo\\" />
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/style.css\\" />
	<link rel=\\"stylesheet\\" href=\\"../assets/highlight.css\\" />
	<script async src=\\"../assets/search.js\\" id=\\"search-script\\"></script>
	<link rel=\\"stylesheet\\" href=\\"../assets/pages.css\\" />
</head>

<body>
	<script>
		document.documentElement.dataset.theme = localStorage.getItem(\\"tsd-theme\\") || \\"os\\"
	</script>
	<header class=\\"tsd-page-toolbar\\">
		<div class=\\"tsd-toolbar-contents container\\">
			<div class=\\"table-cell\\" id=\\"tsd-search\\" data-base=\\"..\\">
				<div class=\\"field\\"><label for=\\"tsd-search-field\\" class=\\"tsd-widget search no-caption\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
							<path d=\\"M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z\\" fill=\\"var(--color-text)\\"></path>
						</svg></label><input type=\\"text\\" id=\\"tsd-search-field\\" aria-label=\\"Search\\" /></div>
				<ul class=\\"results\\">
					<li class=\\"state loading\\">Preparing search index...</li>
					<li class=\\"state failure\\">The search index is not available</li>
				</ul><a href=\\"../index.html\\" class=\\"title\\">demo</a>
			</div>
			<div class=\\"table-cell\\" id=\\"tsd-widgets\\"><a href=\\"#\\" class=\\"tsd-widget menu no-caption\\" data-toggle=\\"menu\\" aria-label=\\"Menu\\"><svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\">
						<rect x=\\"1\\" y=\\"3\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"7\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
						<rect x=\\"1\\" y=\\"11\\" width=\\"14\\" height=\\"2\\" fill=\\"var(--color-text)\\"></rect>
					</svg></a></div>
		</div>
	</header>
	<div class=\\"container container-main\\">
		<div class=\\"col-8 col-content\\">
			<div class=\\"tsd-page-title\\">
				<ul class=\\"tsd-breadcrumb\\">
					<li><a href=\\"../modules.html\\">demo</a></li>
					<li><a href=\\"../modules/pkg_b.html\\">pkg-b</a></li>
					<li><a href=\\"pkg_b.stubB.html\\">stubB</a></li>
				</ul>
				<h1>Variable stubB<code class=\\"tsd-tag ts-flagConst\\">Const</code> </h1>
			</div>
			<div class=\\"tsd-signature\\">stubB<span class=\\"tsd-signature-symbol\\">:</span> <span class=\\"tsd-signature-type\\">0</span><span class=\\"tsd-signature-symbol\\"> = 0</span></div>
			<div class=\\"tsd-comment tsd-typography\\">
				<p>See also <a href=\\"../pkg_a/pages/using-pkg-a.html\\">another link</a>.</p>
			</div>
			<aside class=\\"tsd-sources\\">
				<ul>
					<li>Defined in <a href=\\"https://github.com/KnodesCommunity/typedoc-plugins/blob/develop/packages/plugin-pages/__tests__/mock-fs/monorepo/packages/b/src/index.ts#L4\\">b/src/index.ts:4</a></li>
				</ul>
			</aside>
		</div>
		<div class=\\"col-4 col-menu menu-sticky-wrap menu-highlight\\">
			<div class=\\"tsd-navigation settings\\">
				<details class=\\"tsd-index-accordion\\">
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Settings</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<div class=\\"tsd-filter-visibility\\">
							<h4 class=\\"uppercase\\">Member Visibility</h4>
							<form>
								<ul id=\\"tsd-filter-options\\">
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-protected\\" name=\\"protected\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Protected</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-private\\" name=\\"private\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Private</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-inherited\\" name=\\"inherited\\" checked /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>Inherited</span></label></li>
									<li class=\\"tsd-filter-item\\"><label class=\\"tsd-filter-input\\"><input type=\\"checkbox\\" id=\\"tsd-filter-external\\" name=\\"external\\" /><svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" aria-hidden=\\"true\\">
												<rect class=\\"tsd-checkbox-background\\" width=\\"30\\" height=\\"30\\" x=\\"1\\" y=\\"1\\" rx=\\"6\\" fill=\\"none\\"></rect>
												<path class=\\"tsd-checkbox-checkmark\\" d=\\"M8.35422 16.8214L13.2143 21.75L24.6458 10.25\\" stroke=\\"none\\" stroke-width=\\"3.5\\" stroke-linejoin=\\"round\\" fill=\\"none\\"></path>
											</svg><span>External</span></label></li>
								</ul>
							</form>
						</div>
						<div class=\\"tsd-theme-toggle\\">
							<h4 class=\\"uppercase\\">Theme</h4><select id=\\"theme\\">
								<option value=\\"os\\">OS</option>
								<option value=\\"light\\">Light</option>
								<option value=\\"dark\\">Dark</option>
							</select>
						</div>
					</div>
				</details>
			</div>
			<nav class=\\"tsd-navigation primary\\">
				<details class=\\"tsd-index-accordion\\" open>
					<summary class=\\"tsd-accordion-summary\\">
						<h3><svg width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\">
								<path d=\\"M4.93896 8.531L12 15.591L19.061 8.531L16.939 6.409L12 11.349L7.06098 6.409L4.93896 8.531Z\\" fill=\\"var(--color-text)\\"></path>
							</svg> Modules</h3>
					</summary>
					<div class=\\"tsd-accordion-details\\">
						<ul>
							<li class=\\"current\\"><a href=\\"../modules.html\\">demo</a>
								<ul>
									<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pages/root-doc/index.html\\">Root doc</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pages/root-doc/child.html\\">Root doc child</a></li>
										</ul>
									</li>
									<li class=\\"tsd-kind-module\\"><a href=\\"../modules/pkg_a.html\\">pkg-<wbr />a</a></li>
									<li class=\\"current tsd-kind-module\\"><a href=\\"../modules/pkg_b.html\\">pkg-<wbr />b</a>
										<ul>
											<li class=\\"pages-entry pages-entry-page pages-entry-depth-1\\"><a href=\\"../pkg_b/pages/using-pkg-b/index.html\\">Using pkg-<wbr />b</a>
												<ul>
													<li class=\\"pages-entry pages-entry-page pages-entry-depth-2\\"><a href=\\"../pkg_b/pages/using-pkg-b/details.html\\">pkg-<wbr />b details</a></li>
												</ul>
											</li>
										</ul>
									</li>
								</ul>
							</li>
						</ul>
					</div>
				</details>
			</nav>
			<nav class=\\"tsd-navigation secondary menu-sticky\\">
				<ul>
					<li class=\\"current tsd-kind-variable tsd-parent-kind-module\\"><a href=\\"pkg_b.stubB.html\\" class=\\"tsd-index-link\\"><svg class=\\"tsd-kind-icon\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\">
								<rect fill=\\"var(--color-icon-background)\\" stroke=\\"var(--color-ts-variable)\\" stroke-width=\\"1.5\\" x=\\"1\\" y=\\"1\\" width=\\"22\\" height=\\"22\\" rx=\\"6\\" id=\\"icon-32-path\\"></rect>
								<path d=\\"M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z\\" fill=\\"var(--color-text)\\" id=\\"icon-32-text\\"></path>
							</svg>stubB</a></li>
				</ul>
			</nav>
		</div>
	</div>
	<div class=\\"container tsd-generator\\">
		<p>Generated using <a href=\\"https://typedoc.org/\\" target=\\"_blank\\">TypeDoc</a></p>
	</div>
	<div class=\\"overlay\\"></div>
	<script src=\\"../assets/main.js\\"></script>
</body>

</html>"
`;
